--- a/index.html
+++ b/index.html
@@ -5,46 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <section class="banner color-light-gray d-flex">
+    <div class="container">
+      <h1 class="color-primary">Join our community</h1>
+      <p class="banner--description color-secondary">30-day, hassle-free money back guarantee</p>
+      <p class="color-gray">Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.</p>
+    </div>
+  </section>
+  <section class="information color-light-gray">
+    <div class="subscription bg-color-primary d-flex">
+        <div class="container">
+          <h2>Monthly Subscription</h2>
+          <p class="price"><span class="price--number">&dollar;29</span> <span class="color-mute">per month</span></p>
+          <p>Full access for less than &dollar;1 a day</p>
+          <div class="sign-up-btn btn btn-lrg bg-color-secondary">
+            <a href="#" class="color-light-gray">Sign Up</a>
+        </div>
+      </div>
+      
+    </div>
+    <div class="why-us bg-color-tertiary d-flex">
+      <div class="container">
+        <h2>Why Us</h2>
+<p>Tutorials by industry experts
+Peer &amp; expert code review
+Coding exercises
+Access to our GitHub repos
+Community forum
+Flashcard decks
+New videos every week</p>
+      </div>
+    </div>
+  </section>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="//github.com/stephenduenas" target="_blank">Stephen C. Dueñas</a>.
+      </p>
+    </footer>
 </body>
 </html>
