fix: encapsulated UI on a card

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <section class="banner color-light-gray d-flex">
-    <div class="container">
-      <h1 class="color-primary">Join our community</h1>
-      <p class="banner--description color-secondary">30-day, hassle-free money back guarantee</p>
-      <p class="color-gray">Gain access to our full library of tutorials along with expert code reviews. 
-        Perfect for any developers who are serious about honing their skills.</p>
+  <section class="card-section">
+    <div class="banner color-light-gray bg-color-light-gray d-flex">
+      <div class="container">
+        <h1 class="color-primary">Join our community</h1>
+        <p class="banner--description color-secondary">30-day, hassle-free money back guarantee</p>
+        <p class="color-gray">Gain access to our full library of tutorials along with expert code reviews. 
+          Perfect for any developers who are serious about honing their skills.</p>
+      </div>
     </div>
-  </section>
-  <section class="information color-light-gray">
-    <div class="subscription bg-color-primary d-flex">
-        <div class="container">
-          <h2>Monthly Subscription</h2>
-          <p class="price"><span class="price--number">&dollar;29</span> <span class="color-mute">per month</span></p>
-          <p>Full access for less than &dollar;1 a day</p>
-          <div class="sign-up-btn btn btn-lrg bg-color-secondary">
-            <a href="#" class="color-light-gray">Sign Up</a>
+    <div class="information color-light-gray">
+      <div class="subscription bg-color-primary d-flex">
+          <div class="container">
+            <h2>Monthly Subscription</h2>
+            <p class="price"><span class="price--number">&dollar;29</span> <span class="color-mute">per month</span></p>
+            <p>Full access for less than &dollar;1 a day</p>
+            <div class="sign-up-btn btn btn-lrg bg-color-secondary">
+              <a href="#" class="color-light-gray">Sign Up</a>
+          </div>
         </div>
       </div>
-      
-    </div>
-    <div class="why-us bg-color-tertiary d-flex">
-      <div class="container">
-        <h2>Why Us</h2>
+      <div class="why-us bg-color-tertiary d-flex">
+        <div class="container">
+          <h2>Why Us</h2>
 <p>Tutorials by industry experts
 Peer &amp; expert code review
 Coding exercises
@@ -42,9 +42,11 @@ Access to our GitHub repos
 Community forum
 Flashcard decks
 New videos every week</p>
+        </div>
       </div>
     </div>
   </section>
+  
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
